# LearningOpenCV3

./: CMakeLists.txt  README.md
ch02/: CMakeLists.txt  example2_01.cpp  example2_02.cpp  example2_03.cpp  example2_04.cpp  example2_05.cpp  example2_06.cpp  example2_07.cpp  example2_08.cpp  example2_09.cpp  example2_10.cpp  example2_11.cpp
ch02/Exercises/: CMakeLists.txt  README.md  ex2_03.cpp  ex2_05.cpp
